# cs2-mic-music

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-05-13-cs2-mic-music-design.md
src/cs2_mic_music/: app.py  config.py  hotkeys.py  types.py
src/cs2_mic_music/audio/: decoder.py  mixer.py  sink.py
src/cs2_mic_music/player/: playlists.py  queue.py  transport.py  youtube_resolver.py
src/cs2_mic_music/sources/: local.py  youtube.py
src/cs2_mic_music/ui/: device_picker.py  main_window.py  queue_view.py  url_box.py
