[project]
name = "cs2-mic-music"
version = "0.1.0"
description = "Play local files and YouTube tracks through a virtual mic for CS2 voice chat"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "sounddevice>=0.4.7",
    "numpy>=1.26",
    "pynput>=1.7",
    "yt-dlp>=2025.1.1",
    "mutagen>=1.47",
]

[project.gui-scripts]
cs2-mic-music = "cs2_mic_music.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
